# Monoserv

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Monoserv  compute.go  debug.hpp  deps-CMakeLists.txt  main.cpp  sample.js  server.go  threadpool.cpp  threadpool.hpp
Debug/: makefile  monoserv  subdir.mk  threadpool.d
Debug/server/: subdir.mk
Release/: main.d  makefile  monoserv  sources.mk  subdir.mk
Release/server/: subdir.mk  tcpserver.d
c_src/: compute.c  compute.go  compute.h  compute2.c
game/: game.go
include/: CMakeLists.txt  Makefile  server.hpp  socketaccess.hpp  tcpserver.hpp  threadpool.hpp
server/: iasyncutility.hpp  postdispatcher.hpp  server.hpp  tcpserver.cpp  tcpserver.hpp  tcpserveraccess.hpp
src/: CMakeLists.txt  Makefile  echo_server.cpp  main.cpp  main.cpp.bak  tcpserver.cpp
